vpc/vpc_three_subnets_with_nat.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: vpc with 3 public and private subnets in 3 az zones
Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value:  !Join ['', [!Ref "AWS::StackName", "-vpc" ]]
  PublicSubnet01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      MapPublicIpOnLaunch: true
      Tags:
       - Key: Name
         Value: !Sub
            - "${AWS::StackName}-public-${AZ}"
            - AZ: !Select
                - 0
                - Fn::GetAZs: !Ref 'AWS::Region'
  PublicSubnet02:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Sub
            - "${AWS::StackName}-public-${AZ}"
            - AZ: !Select
                - 1
                - Fn::GetAZs: !Ref 'AWS::Region'
  PublicSubnet03:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select
      - 2
      - Fn::GetAZs: !Ref 'AWS::Region'
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub
            - "${AWS::StackName}-public-${AZ}"
            - AZ: !Select
                - 2
                - Fn::GetAZs: !Ref 'AWS::Region'
  PrivateSubnet01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Sub
            - "${AWS::StackName}-public-${AZ}"
            - AZ: !Select
                - 0
                - Fn::GetAZs: !Ref 'AWS::Region'
  PrivateSubnet02:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Sub
            - "${AWS::StackName}-public-${AZ}"
            - AZ: !Select
                - 1
                - Fn::GetAZs: !Ref 'AWS::Region'
  PrivateSubnet03:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.5.0/24
      AvailabilityZone: !Select
        - 2
        - Fn::GetAZs: !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Sub
            - "${AWS::StackName}-public-${AZ}"
            - AZ: !Select
                - 2
                - Fn::GetAZs: !Ref 'AWS::Region'
  RouteTablePrivate:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-private-route-table
  RouteTablePublic:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-public-route-table
  RouteTableAssociationPublicSubnet01:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet01
      RouteTableId: !Ref RouteTablePublic
  RouteTableAssociationPublicSubnet02:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet02
      RouteTableId: !Ref RouteTablePublic
  RouteTableAssociationPublicSubnet03:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet03
      RouteTableId: !Ref RouteTablePublic

  RouteTableAssociationPrivateSubnet01:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet01
      RouteTableId: !Ref RouteTablePrivate
  RouteTableAssociationPrivateSubnet02:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet02
      RouteTableId: !Ref RouteTablePrivate
  RouteTableAssociationPrivateSubnet03:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet03
      RouteTableId: !Ref RouteTablePrivate
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-internet-gateway
  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  InternetGatewayRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTablePublic
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway
  EIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
  NatGateway:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 'EIP.AllocationId'
      SubnetId: !Ref PublicSubnet01
  NatGatewayRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: NatGateway
    Properties:
      RouteTableId: !Ref RouteTablePrivate
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway

Outputs:
  StackName:
    Description: 'Stack name.'
    Value: !Sub '${AWS::StackName}'
  AZs:
    Description: 'AZs'
    Value: 2
    Export:
      Name: !Sub '${AWS::StackName}-AZs'
  AZ01:
    Description: 'AZ1'
    Value: !Select
      - 0
      - Fn::GetAZs: !Ref 'AWS::Region'
    Export:
      Name: !Sub '${AWS::StackName}-AZ01'
  AZ02:
    Description: 'AZ2'
    Value: !Select
      - 1
      - Fn::GetAZs: !Ref 'AWS::Region'
    Export:
      Name: !Sub '${AWS::StackName}-AZ02'
  AZ03:
    Description: 'AZ2'
    Value: !Select
      - 2
      - Fn::GetAZs: !Ref 'AWS::Region'
    Export:
      Name: !Sub '${AWS::StackName}-AZ03'
  CidrBlock:
    Description: 'The set of IP addresses for the VPC.'
    Value: !GetAtt 'VPC.CidrBlock'
    Export:
      Name: !Sub '${AWS::StackName}-CidrBlock'
  VPC:
    Description: 'VPC'
    Value: !Ref VPC
    Export:
      Name: !Sub '${AWS::StackName}-VPC'
  PublicSubnets:
    Description: 'Subnets public.'
    Value: !Join [',', [!Ref PublicSubnet01, !Ref PublicSubnet02, !Ref PublicSubnet03]]
    Export:
      Name: !Sub '${AWS::StackName}-SubnetsPublic'
  PrivateSubnets:
    Description: 'Subnets private.'
    Value: !Join [',', [!Ref PrivateSubnet01, !Ref PrivateSubnet02, !Ref  PrivateSubnet03]]
    Export:
      Name: !Sub '${AWS::StackName}-SubnetsPrivate'
  PrivateRouteTables:
    Description: 'Route tables private.'
    Value: !Join [',', [!Ref RouteTablePrivate]]
    Export:
      Name: !Sub '${AWS::StackName}-RouteTablesPrivate'
  PublicRouteTables:
    Description: 'Route tables public.'
    Value: !Join [',', [!Ref RouteTablePublic]]
    Export:
      Name: !Sub '${AWS::StackName}-RouteTablesPublic'
  PublicSubnet01:
    Description: 'Public Subnet 01'
    Value: !Ref PublicSubnet01
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnet01'
  PrivateSubnet01:
    Description: 'private subnet 01'
    Value: !Ref PrivateSubnet01
    Export:
      Name: !Sub '${AWS::StackName}-Subnet01Private'
  PublicSubnet02:
    Description: 'Subnet B public.'
    Value: !Ref PublicSubnet02
    Export:
      Name: !Sub '${AWS::StackName}-Subnet02Public'
  PrivateSubnet02:
    Description: 'Subnet 02 private.'
    Value: !Ref PrivateSubnet01
    Export:
      Name: !Sub '${AWS::StackName}-Subnet02Private'
